# fsr2_wgpu

./: Cargo.toml  README.md  build.rs
fsr2/lib/: ffx_fsr2_api_vk_x64d.lib  ffx_fsr2_api_x86_64d.lib
src/: barrier.rs  fsr.rs  lib.rs
