[package]
name = "fsr2_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { git = "https://github.com/jms55/wgpu" }
wgpu-core = { git = "https://github.com/jms55/wgpu" }
wgpu-hal = { git = "https://github.com/jms55/wgpu" }
ash = "0.37"
glam = "0.22"
bitflags = "1.3"
arrayvec = "0.7"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.63"
